--- a/index.html
+++ b/index.html
@@ -142,5 +142,9 @@
       | <a href="tel:+966549388833">+966549388833</a>
     </p>
   </footer>
+  <section>
+  <h2>Interactive Ping Pong Simulator</h2>
+  <iframe src="pingpong.html" width="800" height="500" style="border:none;"></iframe>
+</section>
 </body>
 </html>
