Update game files

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
           <ul>
             <li>Developed a classic game using C# in Visual Studio.</li>
             <li>Applied Object-Oriented Programming (OOP) and collision detection logic.</li>
+            <li><a href="pingpong.html">Play the web version</a></li>
           </ul>
         </article>
       </div>
