--- a/pingpong.html
+++ b/pingpong.html
@@ -27,7 +27,7 @@
     <canvas id="gameCanvas" width="900" height="500" aria-label="Ping Pong Game"></canvas>
 
     <section class="controls">
-      <p><strong>Controls:</strong> W/S or Arrow Up/Down to move | Space to start/pause | R to reset</p>
+      <p><strong>Controls:</strong> W/S or Arrow Up/Down to move | Drag on canvas on mobile | Space to start/pause | R to reset</p>
     </section>
   </main>
 
